# linear-q

./: CMakeLists.txt  build.sh  dep.sh  dependencies.md  readme.md
docs/: attention.md  brief.md  pointer.md
include/: CMakeLists.txt  Config.hpp
include/alg/: Bimap.hpp  linear-tf.hpp  phase-nw.hpp  row-op.hpp  seprate.hpp  typedef.hpp
include/gate/: gate.hpp
include/graph/: Graph.cpp  graph.hpp  tree.hpp
include/qc-core/src/: CMakeLists.txt
test/: CMakeLists.txt  test_cnot.cpp  test_graph.cpp  test_io.cpp  test_ls.cpp  test_pw.cpp  test_ro.cpp  test_sp.cpp  test_steiner.cpp  test_tree.cpp
